{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 2842,
  "lineage": "27397d41-e396-aa77-bde1-8bde3b678065",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015ddf6d22c835a88",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:elastic-ip/eipalloc-015ddf6d22c835a88",
            "association_id": "eipassoc-0a906cb25f016ac99",
            "domain": "vpc",
            "id": "eipalloc-015ddf6d22c835a88",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-03d41b4614c312396",
            "private_dns": "ip-10-0-1-27.eu-north-1.compute.internal",
            "private_ip": "10.0.1.27",
            "public_dns": "ec2-13-48-205-89.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.205.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Public NAT EIP"
            },
            "tags_all": {
              "Name": "Public NAT EIP",
              "Owner": "ymontagnier"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-021e4b1c133e4cb81",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021e4b1c133e4cb81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ymontagnier-TP08-EX01-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064bbc6a9606601b3",
            "private_dns": "ip-10-0-1-16.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-51-20-77-84.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.77.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ymontagnier-TP08-EX01",
                  "Owner": "ymontagnier"
                },
                "tags_all": {
                  "Name": "ymontagnier-TP08-EX01",
                  "Owner": "ymontagnier"
                },
                "throughput": 125,
                "volume_id": "vol-0cab5771d0ae30615",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091fe41bfb0852e21",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-bastion"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-bastion",
              "Owner": "ymontagnier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a573319bb39b12e"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:internet-gateway/igw-0a8d31792df0644a7",
            "id": "igw-0a8d31792df0644a7",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-InternetGateway"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-InternetGateway",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/d55108a8c2347f2d",
            "arn_suffix": "app/ymontagnier-nextcloud-alb/d55108a8c2347f2d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ymontagnier-nextcloud-alb-1736549633.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/d55108a8c2347f2d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ymontagnier-nextcloud-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0472eea70d37ace3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025323228387f8000"
              },
              {
                "subnet_id": "subnet-06618191ba1bbb05b"
              },
              {
                "subnet_id": "subnet-091fe41bfb0852e21"
              }
            ],
            "subnets": [
              "subnet-025323228387f8000",
              "subnet-06618191ba1bbb05b",
              "subnet-091fe41bfb0852e21"
            ],
            "tags": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-alb"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-alb",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a44bba25f2c86f03",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/ymontagnier-nextcloud-alb/d55108a8c2347f2d/3fa29b5c15817c73",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/ymontagnier-nextcloud-alb-tg/a39d89754d731aab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/ymontagnier-nextcloud-alb/d55108a8c2347f2d/3fa29b5c15817c73",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/d55108a8c2347f2d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-alb-http-listener"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-alb-http-listener",
              "Owner": "ymontagnier"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_security_group.nextcloud-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/ymontagnier-nextcloud-alb-tg/a39d89754d731aab",
            "arn_suffix": "targetgroup/ymontagnier-nextcloud-alb-tg/a39d89754d731aab",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/ymontagnier-nextcloud-alb-tg/a39d89754d731aab",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/d55108a8c2347f2d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ymontagnier-nextcloud-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-alb-tg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-alb-tg",
              "Owner": "ymontagnier"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015ddf6d22c835a88",
            "association_id": "eipassoc-0a906cb25f016ac99",
            "connectivity_type": "public",
            "id": "nat-0f578023862c9329d",
            "network_interface_id": "eni-03d41b4614c312396",
            "private_ip": "10.0.1.27",
            "public_ip": "13.48.205.89",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-091fe41bfb0852e21",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-NATGateway"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-NATGateway",
              "Owner": "ymontagnier"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:network-acl/acl-02493bede414efaf3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02493bede414efaf3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "13.48.4.200/30",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "134400125759",
            "subnet_ids": [
              "subnet-025323228387f8000",
              "subnet-06618191ba1bbb05b",
              "subnet-0661ff9e0283f5f90",
              "subnet-091fe41bfb0852e21",
              "subnet-0b6bef5fc32235a7d",
              "subnet-0e727417c688f0886"
            ],
            "tags": {
              "Name": "ymontagnier-TP08-EX01-acl"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-acl",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0e69f66cda47dddc8",
            "network_acl_id": "acl-02493bede414efaf3",
            "subnet_id": "subnet-0661ff9e0283f5f90"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fff1f070d325936a",
            "network_acl_id": "acl-02493bede414efaf3",
            "subnet_id": "subnet-0e727417c688f0886"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-019471d118f4132a7",
            "network_acl_id": "acl-02493bede414efaf3",
            "subnet_id": "subnet-0b6bef5fc32235a7d"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c637f99ed9348b1b",
            "network_acl_id": "acl-02493bede414efaf3",
            "subnet_id": "subnet-091fe41bfb0852e21"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-07e325931d0ffc89c",
            "network_acl_id": "acl-02493bede414efaf3",
            "subnet_id": "subnet-025323228387f8000"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0a7b1770d10422d41",
            "network_acl_id": "acl-02493bede414efaf3",
            "subnet_id": "subnet-06618191ba1bbb05b"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-04a518ec68846553e",
            "id": "rtb-04a518ec68846553e",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f578023862c9329d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP08-EX01-private-rtb-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-private-rtb-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0ccd611d21ad75b4f",
            "id": "rtb-0ccd611d21ad75b4f",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f578023862c9329d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP08-EX01-private-rtb-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-private-rtb-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-04fba7cc92ec729dc",
            "id": "rtb-04fba7cc92ec729dc",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f578023862c9329d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP08-EX01-private-rtb-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-private-rtb-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-06361987361419e99",
            "id": "rtb-06361987361419e99",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8d31792df0644a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP08-EX01-public-rtb"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-public-rtb",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05626ae68a695e8cd",
            "route_table_id": "rtb-04a518ec68846553e",
            "subnet_id": "subnet-0661ff9e0283f5f90"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f99db129c3c223a",
            "route_table_id": "rtb-0ccd611d21ad75b4f",
            "subnet_id": "subnet-0e727417c688f0886"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d8a772a3e55351e",
            "route_table_id": "rtb-04fba7cc92ec729dc",
            "subnet_id": "subnet-0b6bef5fc32235a7d"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9145a3c51d2e049",
            "route_table_id": "rtb-06361987361419e99",
            "subnet_id": "subnet-091fe41bfb0852e21"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eedefbb28a3d8734",
            "route_table_id": "rtb-06361987361419e99",
            "subnet_id": "subnet-025323228387f8000"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088e308fb474fc9f1",
            "route_table_id": "rtb-06361987361419e99",
            "subnet_id": "subnet-06618191ba1bbb05b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-09a573319bb39b12e",
            "description": "Allow SSH inbound traffic from ynov and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a573319bb39b12e",
            "ingress": [
              {
                "cidr_blocks": [
                  "176.138.11.81/32",
                  "13.38.79.125/32",
                  "195.7.117.146/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ymontagnier-TP08-EX01-bastion-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP08-EX01-bastion-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-bastion-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-04c5dc5da5d9a51ed",
            "description": "Security group for Nextcloud EFS",
            "egress": [],
            "id": "sg-04c5dc5da5d9a51ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056febfbb95b84841"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "ymontagnier-TP08-EX01-nextcloud-efs-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-efs-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-efs-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0472eea70d37ace3e",
            "description": "Security group for Nextcloud ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0472eea70d37ace3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "15.237.144.13/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "176.138.11.81/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056febfbb95b84841"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "195.7.117.146/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ymontagnier-TP08-EX01-nextcloud-alb-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-alb-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-alb-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-002343448a814f9bc",
            "description": "Security group for Nextcloud RDS",
            "egress": [],
            "id": "sg-002343448a814f9bc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056febfbb95b84841"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ymontagnier-TP08-EX01-nextcloud-db-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-db-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-db-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-056febfbb95b84841",
            "description": "Allow SSH inbound traffic from bastion and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056febfbb95b84841",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09a573319bb39b12e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0472eea70d37ace3e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ymontagnier-TP08-EX01-nextcloud-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-nextcloud-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0661ff9e0283f5f90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0661ff9e0283f5f90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-private-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0e727417c688f0886",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e727417c688f0886",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-private-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0b6bef5fc32235a7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6bef5fc32235a7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-private-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-private-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-091fe41bfb0852e21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091fe41bfb0852e21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-public-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-public-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-025323228387f8000",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025323228387f8000",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-public-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-public-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-06618191ba1bbb05b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06618191ba1bbb05b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-public-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-public-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a44bba25f2c86f03"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:vpc/vpc-0a44bba25f2c86f03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d134a19abadb771b",
            "default_route_table_id": "rtb-0b65025ca9a077e85",
            "default_security_group_id": "sg-0cf5808acdf2c3b4f",
            "dhcp_options_id": "dopt-84fa2ded",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a44bba25f2c86f03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b65025ca9a077e85",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-TP08-EX01-vpc"
            },
            "tags_all": {
              "Name": "ymontagnier-TP08-EX01-vpc",
              "Owner": "ymontagnier"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_alb_to_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-04a9809a41346bcd9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04a9809a41346bcd9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0472eea70d37ace3e",
            "security_group_rule_id": "sgr-04a9809a41346bcd9",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all outbound traffic",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0306726cd123d77f1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0306726cd123d77f1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09a573319bb39b12e",
            "security_group_rule_id": "sgr-0306726cd123d77f1",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all outbound traffic",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0ba027fa09f07d98f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ba027fa09f07d98f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-056febfbb95b84841",
            "security_group_rule_id": "sgr-0ba027fa09f07d98f",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all outbound traffic",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_alb_to_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-07d68b46790c4f29b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07d68b46790c4f29b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0472eea70d37ace3e",
            "security_group_id": "sg-056febfbb95b84841",
            "security_group_rule_id": "sgr-07d68b46790c4f29b",
            "tags": {
              "Name": "Allow HTTP from ALB"
            },
            "tags_all": {
              "Name": "Allow HTTP from ALB",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_cloud9_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-01e789bb273fdb499",
            "cidr_ipv4": "15.237.144.13/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-01e789bb273fdb499",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0472eea70d37ace3e",
            "security_group_rule_id": "sgr-01e789bb273fdb499",
            "tags": {
              "Name": "Autoriser l'accès à NextCloud depuis Ynov"
            },
            "tags_all": {
              "Name": "Autoriser l'accès à NextCloud depuis Ynov",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_maison_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-08b4fd19da2b8e932",
            "cidr_ipv4": "176.138.11.81/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-08b4fd19da2b8e932",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0472eea70d37ace3e",
            "security_group_rule_id": "sgr-08b4fd19da2b8e932",
            "tags": {
              "Name": "Autoriser l'accès à NextCloud depuis ma maison"
            },
            "tags_all": {
              "Name": "Autoriser l'accès à NextCloud depuis ma maison",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_nextcloud_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-050521e9930fe47af",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-050521e9930fe47af",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-056febfbb95b84841",
            "security_group_id": "sg-0472eea70d37ace3e",
            "security_group_rule_id": "sgr-050521e9930fe47af",
            "tags": {
              "Name": "Allow HTTP access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow HTTP access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_ynov_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0b06c5d822f380cb8",
            "cidr_ipv4": "195.7.117.146/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b06c5d822f380cb8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0472eea70d37ace3e",
            "security_group_rule_id": "sgr-0b06c5d822f380cb8",
            "tags": {
              "Name": "Autoriser l'accès à NextCloud depuis Ynov"
            },
            "tags_all": {
              "Name": "Autoriser l'accès à NextCloud depuis Ynov",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-084147cc997b111fc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-084147cc997b111fc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-056febfbb95b84841",
            "security_group_id": "sg-002343448a814f9bc",
            "security_group_rule_id": "sgr-084147cc997b111fc",
            "tags": {
              "Name": "Allow MySQL access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow MySQL access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_db_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_nfs_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-06e9c267305139c17",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-06e9c267305139c17",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-056febfbb95b84841",
            "security_group_id": "sg-04c5dc5da5d9a51ed",
            "security_group_rule_id": "sgr-06e9c267305139c17",
            "tags": {
              "Name": "Allow NFS/EFS access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow NFS/EFS access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-052c56dd2cd57cb16",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-052c56dd2cd57cb16",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09a573319bb39b12e",
            "security_group_id": "sg-056febfbb95b84841",
            "security_group_rule_id": "sgr-052c56dd2cd57cb16",
            "tags": {
              "Name": "Allow SSH from Bastion"
            },
            "tags_all": {
              "Name": "Allow SSH from Bastion",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_cloud9_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0c16c7f862af9bfce",
            "cidr_ipv4": "13.38.79.125/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c16c7f862af9bfce",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09a573319bb39b12e",
            "security_group_rule_id": "sgr-0c16c7f862af9bfce",
            "tags": {
              "Name": "Allow SSH from Cloud9"
            },
            "tags_all": {
              "Name": "Allow SSH from Cloud9",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_maison_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0b95c3e1a6811a80e",
            "cidr_ipv4": "176.138.11.81/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b95c3e1a6811a80e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09a573319bb39b12e",
            "security_group_rule_id": "sgr-0b95c3e1a6811a80e",
            "tags": {
              "Name": "Allow SSH depuis ma maison"
            },
            "tags_all": {
              "Name": "Allow SSH depuis ma maison",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_ynov_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-047e04d1503b31f53",
            "cidr_ipv4": "195.7.117.146/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-047e04d1503b31f53",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09a573319bb39b12e",
            "security_group_rule_id": "sgr-047e04d1503b31f53",
            "tags": {
              "Name": "Allow SSH from YNOV"
            },
            "tags_all": {
              "Name": "Allow SSH from YNOV",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}